2006-01-30  Julien Puydt  <jpuydt@free.fr>

	* src/components/dbus.cpp, src/components/dbus.h: Implemented
	gnomemeeting_dbus_component_account_registration, which is needed to
	make the 2.0 dbus component complete.
	* src/endpoints/sip.cpp: Made use of the previous to notify of
	registrations/unregistrations through dbus.

2006-01-30  Erdal Ronahi <erdal.ronahi@gmail.com>

	* configure.in: Added ku (Kurdish) to all_linguas
	* po/ku.po: Added

2006-01-29  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Incremented version.

2006-01-29  Julien Puydt  <jpuydt@free.fr>

	* src/endpoints/ekiga.cpp: Initialize the statusicon correctly, so it
	shows the correct state at startup.

2006-01-29  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/accountshandler.cpp src/gui/accounts.cpp: 
	Added possibility to use an URL as user field in the accounts window.
	That URL will be used as FROM field in SIP requests.

2006-01-29  Julien Puydt  <jpuydt@free.fr>

	* src/gui/tools.cpp: Fixes #162454.
	* src/clients/stun.cpp: Fixes #162459.
	* src/gui/druid.cpp: Fixes #328746.

2006-01-29  Julien Puydt  <jpuydt@free.fr>

	* src/gui/chat.cpp: Applied patch from Jan Schampera to fix the bug
	where opening the chat window closes the connection (!).

2006-01-29  Damien Sandras  <dsandras@gnome.org>

	* src/gui/main.cpp:
	Fixed hack from Jan Schampera.

2006-01-29  Damien Sandras  <dsandras@gnome.org>

	* src/gui/main.cpp:
	Fixed #328799, IP dial doesn't make sense anymore with SIP.

2006-01-29  Damien Sandras  <dsandras@gnome.org>

	* src/devices/videooutput.cpp: Fixed unitialized variables.

2006-01-29  Damien Sandras  <dsandras@gnome.org>

	* src/accounts.cpp, src/accounts.h: Fixed accounts window still being 
	in "Registering" state when a timeout occurs. Allow editing an account 
	by double-clicking on it.

	* src/tools.cpp: Fixed wrong URL for PC-to-Phone provider.

	* src/endpoints/sip.cpp: Reduced timeouts.

	* src/gui/chat.cpp: Fixed indentation.
