@@ -1,3 +1,9 @@
+2006-01-31  Julien Puydt  <jpuydt@free.fr>
+
+	* src/gui/accounts.cpp, src/gui/accounts.h, src/gui/druid.cpp,
+	src/gui/tools.cpp: Renamed gnomemeeting_get_account to
+	gnomemeeting_get_default_account, so it's clearer.
+
 2006-01-30  Julien Puydt  <jpuydt@free.fr>
 
 	* src/components/dbus.cpp, src/components/dbus.h: Implemented
